--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 fastapi = "^0.104.0"
 sse-starlette = "^1.6.5"
 uvicorn = {extras = ["standard"], version = "^0.23.2"}
+ruff = "^0.1.3"
 
 
 [build-system]
